# Compilador

./: CMakeLists.txt
src/: ast.cpp  ast.hpp  ast_optimizer.cpp  ast_optimizer.hpp  compiler.cpp  compiler.hpp  exemplo de entradas.txt  operator_type.hpp  parser.cpp  parser.hpp  parser_tests.cpp  scanner.cpp  scanner.hpp  semantic_analyzer.cpp  semantic_analyzer.hpp  statement.hpp  symbol_table.cpp  symbol_table.hpp  token.hpp  value.cpp  value.hpp
